# ConcreteAbstracts

./: .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  README.md  build.sh
.github/workflows/: clang-tidy-review.yml
html/: Air_8cpp.html  Air_8cpp__incl.map  Air_8cpp__incl.md5  Air_8h.html  Air_8h__dep__incl.map  Air_8h__dep__incl.md5  Air_8h__incl.map  Air_8h__incl.md5  Air_8h_source.html  AllyRegistry_8cpp.html  AllyRegistry_8cpp__incl.map  AllyRegistry_8cpp__incl.md5  AllyRegistry_8h.html  AllyRegistry_8h__dep__incl.map  AllyRegistry_8h__dep__incl.md5  AllyRegistry_8h__incl.map  AllyRegistry_8h__incl.md5  AllyRegistry_8h_source.html  ArmoryFacade_8cpp.html  ArmoryFacade_8cpp__incl.map  ArmoryFacade_8cpp__incl.md5  ArmoryFacade_8h.html  ArmoryFacade_8h__dep__incl.map  ArmoryFacade_8h__dep__incl.md5  ArmoryFacade_8h__incl.map  ArmoryFacade_8h__incl.md5  ArmoryFacade_8h_source.html  AttackVessel_8cpp.html  AttackVessel_8cpp__incl.map  AttackVessel_8cpp__incl.md5  AttackVessel_8h.html  AttackVessel_8h__dep__incl.map  AttackVessel_8h__dep__incl.md5  AttackVessel_8h__incl.map  AttackVessel_8h__incl.md5  AttackVessel_8h_source.html  AttackWeaponCreator_8cpp.html  AttackWeaponCreator_8cpp__incl.map  AttackWeaponCreator_8cpp__incl.md5  AttackWeaponCreator_8h.html  (+1074 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  (+66 more)
include/: Air.h  AllyRegistry.h  ArmoryFacade.h  AttackVessel.h  AttackWeapon.h  AttackWeaponCreator.h  Barricades.h  BattleGround.h  BattleRegistry.h  Citizens.h  Country.h  CountryHistory.h  CountryIterator.h  CountryMemento.h  ExplosiveWeaponCreator.h  ExplosiveWeapons.h  Guardian.h  Iterator.h  JetCreator.h  Jets.h  Land.h  Marine.h  Medic.h  MeleeWeaponCreator.h  MeleeWeapons.h  Mines.h  NuclearWeaponCreator.h  NuclearWeapons.h  People.h  Pilot.h  RangedWeaponCreator.h  RangedWeapons.h  RecruitIterator.h  RecruiterContext.h  Recruits.h  RecuiterContext.h  Refugee.h  Registry.h  Sea.h  ShipCreator.h  (+20 more)
include/util/: ListSelectionPrompt.h  UnorderedPair.hpp  colours.h  enums.h
src/: Air.cpp  AllyRegistry.cpp  ArmoryFacade.cpp  AttackVessel.cpp  AttackWeaponCreator.cpp  Barricades.cpp  BattleGround.cpp  BattleRegistry.cpp  Citizens.cpp  Country.cpp  CountryHistory.cpp  CountryIterator.cpp  CountryMemento.cpp  ExplosiveWeaponCreator.cpp  ExplosiveWeapons.cpp  Guardian.cpp  JetCreator.cpp  Jets.cpp  Land.cpp  ListSelectionPrompt.cpp  Marine.cpp  Medic.cpp  MeleeWeaponCreator.cpp  MeleeWeapons.cpp  Mines.cpp  NuclearWeaponCreator.cpp  NuclearWeapons.cpp  People.cpp  Pilot.cpp  RangedWeaponCreator.cpp  RangedWeapons.cpp  RecruitIterator.cpp  RecruiterContext.cpp  Recruits.cpp  Refugee.cpp  Sea.cpp  ShipCreator.cpp  Ships.cpp  Soldier.cpp  Space.cpp  (+17 more)
testSrc/: testMain.cpp
